WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209413
[Web Animations] Fix the typo for ElementAnimationRareData::completedTransitionByProperty()
https://bugs.webkit.org/show_bug.cgi?id=209413
Summary
[Web Animations] Fix the typo for ElementAnimationRareData::completedTransiti...
Antoine Quint
Reported
2020-03-23 01:35:37 PDT
[Web Animations] Fix the typo for ElementAnimationRareData::completedTransitionByProperty()
Attachments
Patch
(6.11 KB, patch)
2020-03-23 01:37 PDT
,
Antoine Quint
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-03-23 01:37:28 PDT
Created
attachment 394245
[details]
Patch
Antoine Quint
Comment 2
2020-03-23 02:05:36 PDT
Committed
r258827
: <
https://trac.webkit.org/changeset/258827
>
Radar WebKit Bug Importer
Comment 3
2020-03-23 02:06:15 PDT
<
rdar://problem/60763249
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug