[Web Animations] Fix the typo for ElementAnimationRareData::completedTransitionByProperty() https://bugs.webkit.org/show_bug.cgi?id=209413

Reviewed by Antti Koivisto.

There can be several completed transitions by property, so renaming this property to completedTransitionsByProperty.

* animation/AnimationTimeline.cpp:
(WebCore::AnimationTimeline::removeDeclarativeAnimationFromListsForOwningElement):
(WebCore::AnimationTimeline::updateCSSTransitionsForElement):
* animation/DocumentTimeline.cpp:
(WebCore::DocumentTimeline::transitionDidComplete):
* animation/ElementAnimationRareData.h:
(WebCore::ElementAnimationRareData::completedTransitionsByProperty):
(WebCore::ElementAnimationRareData::completedTransitionByProperty): Deleted.
* dom/Element.cpp:
(WebCore::Element::completedTransitionsByProperty):
(WebCore::Element::completedTransitionByProperty): Deleted.
* dom/Element.h:

Canonical link: https://commits.webkit.org/222332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258827 268f45cc-cd09-0410-ab3c-d52691b4dbfc